--- a/index.html
+++ b/index.html
@@ -25,18 +25,11 @@
 			<p>En esta fecha en especial, debes recordar</p>
 			<p>que empieza un nuevo años lleno de nuevas</p>
 			<p>aventurar, no lo olvides.</p>
-            <audio id="bgAudio" autoplay loop src="multimedia/C418.mp3"></audio>
+            <audio id="bgAudio" controls src="multimedia/Feliz.mp3"></audio>
 			<p class="text-right">Feliz Cumpleaños, Noemi</p>
 			<p class="text-right">♥Josue (Josin) </p>
 		</div>
 	</div>
 </body>
-
-<script>
-    window.onload = function() {
-        var backgroundAudio = document.getElementById("bgAudio");
-        backgroundAudio.volume = 0.2;
-    };
-</script>
 
 </html>
